# osi-visualizer

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.nvidia  Dockerfile.osi_vis  LICENSE  Makefile  README.md  README_docker.md  build-install-build-deps.sh  build-nvidia-docker.sh  build.sh  docker-compose.yml  install-deps.sh  install.sh  resources.qrc  run-nvidia-docker.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-build.yml
Resources/Python/: README.md  compare_data.py
Resources/Shaders/: FragmentShader.frag  VertexShader.vert
doc/: howtocontribute.rst  nvidia-docker.rst  osi-visualizer_user_guide.adoc  panels.rst
doc/misc/: example_visualizer.adoc  idea_visualizer.adoc
doc/setup/: building_docker.adoc  building_visualizer.adoc  installing_dependencies.adoc
doc/use/: comparing_messages.adoc  configuring_view.adoc  playing_large_files.adoc  playing_messages.adoc  receiving_network.adoc  running_visualizer.adoc  running_visualizer_docker.adoc  saving_messages.adoc  showing_field_of_view.adoc
include/: appconfig.h  camera.h  customtreewidgetitem.h  definitions.h  demodatagenerator.h  displayobjectdialog.h  fmureceiver.h  glfieldofview.h  glgrid.h  gllanemarking.h  global.h  globject.h  glpoint.h  glpointcloud.h  gltrafficsign.h  gltriangle.h  glvehicle.h  glwidget.h  imessagesource.h  lane.h  mainwindow.h  osiobjectstub.h  osiparser.h  osireader.h  pointcloud.h  pythoncomparedialog.h  tcpreceiver.h  types.h  utils.h
osi-data-checker/: README.md
osi_pb/: README
osi_vis_patch/: cmake.patch  osi_cmake.patch
precompiled_binaries_windows10/: README.txt  Run_osi-visualizer.bat  example_sensor_view.txt
resources/: resources.qrc
resources/Python/: compare_data.py
resources/Scenarios/: small_test.txt.lzma
resources/Shaders/: FragmentShader.frag  VertexShader.vert
src/: appconfig.cpp  camera.cpp  customtreewidgetitem.cpp  demodatagenerator.cpp  displayobjectdialog.cpp  fmureceiver.cpp  glfieldofview.cpp  glgrid.cpp  gllanemarking.cpp  globject.cpp  glpoint.cpp  glpointcloud.cpp  gltrafficsign.cpp  gltriangle.cpp  glvehicle.cpp  glwidget.cpp  lane.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  osiparser.cpp  osireader.cpp  pointcloud.cpp  pythoncomparedialog.cpp  qrc_resources.cpp  tcpreceiver.cpp  utils.cpp
